--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "nodemon": "^3.0.1",
     "sequelize": "^6.33.0",
     "sequelize-cli": "^6.6.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "yarn": "^1.22.19"
   }
 }
